# CircuitBuilder

./: Circuit.cpp  CircuitBuilder.pro  Dockerfile  Dockerfile.dev  Dockerfile.test  Gate.cpp  Makefile  QT_CREATOR_FIX.md  README.md  build.sh  docker-compose.yml  draggablebutton.cpp  draggablebutton.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_Circuit.cpp  moc_draggablebutton.cpp  moc_mainwindow.cpp  qrc_rsc.cpp  qt_build.sh  reset_qt_creator.sh  run-tests.sh  ui_mainwindow.h
.github/workflows/: ci-cd.yml
CircuitBuilderApp.app/Contents/MacOS/: CircuitBuilderApp
deploy/terraform-budget/: user_data.sh
local-test-reports/: coverage.info  coverage.xml  test-results.xml
local-test-reports/html/: index-sort-f.html  index-sort-l.html  index.html
local-test-reports/html/app/: Gate.cpp.func-sort-c.html  Gate.cpp.func.html  Gate.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
local-test-reports/html/app/tests/: index-sort-f.html  index-sort-l.html  index.html  main_test.cpp.func-sort-c.html  main_test.cpp.func.html  main_test.cpp.gcov.html  test_comprehensive.cpp.func-sort-c.html  test_comprehensive.cpp.func.html  (+4 more)
test-reports/: coverage.info  coverage.xml  test-results.xml
test-reports/html/: index-sort-f.html  index-sort-l.html  index.html
test-reports/html/app/: Gate.cpp.func-sort-c.html  Gate.cpp.func.html  Gate.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
tests/: CMakeLists.txt  main_test.cpp  test_circuit.cpp  test_comprehensive.cpp  test_gate.cpp  test_integration.cpp  test_simple.cpp  test_truth_table.cpp
(+12 files in other folders)
